--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ img {
 
   
 <div class="right-column">
-      <img src="recipe-photo-Enhanced-SR.jpg" alt="Spinach Tofu Sesame Stir-Fry">
+      <img src="recipe-photo-Enhanced-SR2" alt="Spinach Tofu Sesame Stir-Fry">
 
       <h2>Preparation</h2>
 
